# pam_bio

./: .gitignore  LICENSE  README.md  auth.vala  config.vala  context.vala  daemon.vala  dbus.conf  fprint.vala  howdy.vala  meson.build  meson_options.txt  pam.vala  pam_async_ext.c  pam_async_ext.h  pam_bio.c  pam_bio.vala  password.vala  utils.vala
authn/: base.vala  daemon.vala  fprint.vala  howdy.vala  parallel.vala  password.vala
data/: pam_biod.service  xyz.ccat3z.pambio.dbus.service
dbus/: daemon.vala  dbus.vala  fprint.vala
vapi/: config.vapi  pam.vapi
